# agent_init

./: .coveragerc  .env  .env.example  .gitignore  .pre-commit-config.yaml  DAILY_OPTIMIZATION_SUMMARY.md  DEPENDENCIES_UPDATE_SUMMARY.md  DEPENDENCY_UPDATE_SUMMARY.md  DEPENDENCY_UPDATE_SUMMARY_2026.md  FINAL_OPTIMIZATION_RECOMMENDATIONS.md  LATEST_DEPENDENCY_UPDATE.md  LATEST_UPDATE_SUMMARY.md  LICENSE  Makefile  OPTIMIZATION_OPPORTUNITIES_ANALYSIS.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_REPORT.md  PHASE2_PLAN.md  PROJECT_ANALYSIS.md  PROJECT_STATUS_2026_03_04.md  PROJECT_STATUS_REVIEW.md  README.md  SECURITY_CHECKLIST.md  TEST_REFACTORING_SUMMARY.md  USER.md  code_health_summary.md  config.json  convert.py  debug_test.py  debug_workflow.py  demo_optimization_effects.py  emb_start.py  final_test.py  fix_applied_changes.py  health_report.json  health_report.py  knowledge.py  langgraph.json  main.py  pyproject.toml  (+14 more)
.optimization_backups/: main_20260304_071241.py.bak
config/: default.yaml
env/: docker-compose.yml
knowledge/: convert.py  question.py
memory/: 2026-03-04.md
prompt/: COMPREHENSIVE_FEATURE_ANALYSIS.md  FINAL_COMPREHENSIVE_REPORT.md  FINAL_FEATURE_SUMMARY.md  FINAL_OPTIMIZATION_SUMMARY.md  FINAL_PROJECT_SUMMARY.md  IMPROVEMENT_ROADMAP.md  OPTIMIZATION_IMPLEMENTATION_PLAN.md  OPTIMIZATION_RECOMMENDATIONS.md  OPTIMIZATION_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  PROJECT_FINAL_STATUS.md  QUICK_START.md  commit_message_draft.md  project_analysis_report.md  qa.md  strategies_summary.md
src/: cli.py
src/analyzers/: base.py
src/config/: manager.py  settings.py
src/graph/: base.py  self_optimizing.py
src/knowledge/: chunk.py  convert.py  question.py  static.py
src/llm/: enhancer.py
src/nodes/: base.py  optimization.py  phase2.py  real.py  self_optimizing.py
src/self_optimizing/: demo_target.py  orchestrator.py
src/state/: base.py
src/strategies/: optimization_strategies.py  strategy_definitions.py
src/testing/: validator.py
src/tools/: __init__.py  ast_parser.py  code_analyzer.py  file_scanner.py  json_generator.py  simple_analyzer.py
src/utils/: config.py  customModel.py  file_modifier.py  logger.py  logging_config.py  office_to_pdf.py  performance.py  report_generator.py  utils.py  vector_db.py
test/: test_ast_parser.py  test_code_analyzer.py  test_config_validation_extended.py  test_edge_cases.py  test_graph.py  test_integration.py  test_json_generator.py  test_logging_config.py  test_nodes_real_extended.py  test_optimization_node.py  test_optimization_strategies.py  test_performance.py  test_phase2.py  test_report_generator.py  test_simple_analyzer.py  test_sqlite_db.py  test_utils.py  test_validator.py  test_validator_extended.py
tests/: README.md  conftest.py  pytest.ini  test_all_strategies.py  test_bare_simulation.py  test_code_analyzer_extended.py  test_config_manager.py  test_e2e.py  test_file_modifier.py  test_file_scanner.py  test_file_scanner_extended.py  test_graph.py  test_graph_simple.py  test_imports.py  test_integration.py  test_json_generator.py  test_llm_enhancer.py  test_optimization_simple.py  test_optimization_workflow.py  test_phase2_simple.py  test_self_optimization_demo.py  test_self_optimizing_simple.py  test_simple.py  test_strategy_definitions.py  test_validator.py
utils/: emb.py  logger.py  office_to_pdf.py  sqlite_db.py  utils.py  vector_db.py
