[build-system]
requires = ["setuptools>=65.5.0", "wheel", "setuptools-scm>=7.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "self-optimizing-code-assistant"
version = "0.2.0"
description = "基于LangGraph和AI的自优化代码助手"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Code Assistant Team", email = "team@example.com"}
]
maintainers = [
    {name = "Code Assistant Team", email = "team@example.com"}
]
keywords = ["code-optimization", "ai", "langgraph", "self-optimizing", "code-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "langchain>=0.3.11",
    "langchain-core>=0.3.26", 
    "langchain-openai>=0.2.8",
    "langchain-community>=0.3.17",
    "langgraph>=0.2.55",
    "pydantic>=2.10.3,<3.0.0",
    "pydantic-settings>=2.6.1,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "openai>=1.57.2",
    "loguru>=0.7.2",
    "PyYAML>=6.0.2",
    "toml>=0.10.2",
    "cryptography>=44.0.0",
    "httpx>=0.28.1",
    "requests>=2.32.3",
    "pathlib2>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "black>=24.10.0",
    "ruff>=0.8.6",
    "mypy>=1.14.1",
    "isort>=5.13.2",
    "flake8>=7.1.1",
    "pre-commit>=4.0.1",
    "bandit>=1.7.10",
    "safety>=3.2.11",
    "memory-profiler>=0.61.0",
    "line-profiler>=4.1.3",
    "types-PyYAML>=6.0.0.20240917",
    "types-requests>=2.32.0.20241016",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocs-mermaid2-plugin>=1.2.1",
]

llms = [
    "anthropic>=0.7.0",
    "google-generativeai>=0.3.0",
]

jupyter = [
    "jupyter>=1.0.0",
    "ipython>=8.15.0",
    "jupyterlab>=4.0.0",
]

build = [
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/self-optimizing-code-assistant"
Documentation = "https://your-org.github.io/self-optimizing-code-assistant"
Repository = "https://github.com/your-org/self-optimizing-code-assistant.git"
"Bug Tracker" = "https://github.com/your-org/self-optimizing-code-assistant/issues"

[project.scripts]
self-optimizing-assistant = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "-v",
    "--tb=short", 
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=70",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance tests",
    "security: marks tests as security tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py39"
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F", 
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-comprehensions
    "C4",
    # flake8-bandit (security)
    "S",
    # flake8-django
    "DJ",
    # pep8-naming
    "N",
    # flake8-annotations
    "ANN",
]
ignore = [
    # Star-arg unpacking after a keyword argument is strongly discouraged
    "B026",
    # Allow untyped dict args
    "ANN003",
    # Allow untyped function args
    "ANN002",
    "ANN001",
    # Allow untyped **kwargs
    "ANN003",
    "ANN002",
    "ANN001",
    # Allow no return type
    "ANN201",
    "ANN204",
    # Allow any type
    "ANN401",
    # Line too long (handled by Black)
    "E501",
    # Conflicts with Black
    "E203",
    # `for-else` is fine
    "B007",
    # Too complex (allow slightly more complex for now)
    "C901",
    # Too many arguments (allow for now)
    "PLR0913",
    # Magic number comparison (allow in tests)
    "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # Use of assert detected
    "S106",  # Possible hardcoded password
    "S311",  # Standard pseudo-random generators are not suitable for security/cryptographic purposes
    "ANN",   # Allow missing type hints in tests
    "B011",  # Do not assert False
]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Start off with these
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# Getting these passing should be easy
strict_equality = true
strict_concatenate = true

# Strongly recommend enabling this one as soon as you can
check_untyped_defs = true

# These shouldn't be too much additional work, but may be tricky to
# get passing if you use a lot of untyped libraries
disallow_untyped_defs = false
disallow_incomplete_defs = false

# These next few are various gradations of stricter typing
disallow_untyped_decorators = false
disallow_any_generics = false
disallow_subclassing_any = false

# This one isn't too hard to pass, and has a high benefit
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "loguru.*",
    "scipy.*",
    "matplotlib.*",
    "networkx.*",
    "sklearn.*",
    "anthropic.*",
    "google.generativeai.*",
]
ignore_missing_imports = true